--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/multer": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
@@ -63,6 +64,7 @@
     "input-otp": "^1.4.2",
     "jose": "6.1.0",
     "lucide-react": "^0.453.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
